...

/// The translations for English (`en`).
class AppLocalizationsEn extends AppLocalizations {
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get appTitle => 'Garbanzo AI';

  @override
  String get language => 'Language';

  @override
  String get languageEnglish => 'English';
...
  }

  @override
  String get fromYourKnowledgeBase => 'From your knowledge base';

  @override
  String get headingSignIn => 'Sign in';

  @override
  String get hintApiKeyAbcNdebug1 => 'API_KEY=abc\\nDEBUG=1';

  @override
  String get hintAtLeast6Characters => 'At least 6 characters';
...
  String get labelDescriptionOptional => 'Description (optional)';

  @override
  String get labelDisabled => 'Disabled';

  @override
  String get labelEmail => 'Email';

  @override
  String get labelEnvKeyValueOnePerLine => 'Env (KEY=VALUE, one per line)';

  @override
  String get labelFailedToCreateServer => 'Failed to create server';
...
  String get labelFeature => 'Feature';

  @override
  String get labelFullName => 'Full name';

  @override
  String get labelFullNameOptional => 'Full name (optional)';

  @override
  String get labelGenerate => 'Generate';

  @override
  String get labelHttp => 'HTTP';
...
  String get labelNewRoom => 'New Room';

  @override
  String get labelOneOff => 'One-off';

  @override
  String get labelPassword => 'Password';

  @override
  String get labelPrompt => 'Prompt';

  @override
  String get labelPromptContent => 'Prompt content';
...
